# dev-env

./: Cargo.toml
lsp/: Cargo.toml
lsp/src/domain/: proto.rs
