[package]
name = "dev-env"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lsp-server"
path = "bin/lsp-server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.27", features = ["full"]}
clap = { version = "4.2", features = ["derive", "env"] }